--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "node-gyp configure build --arch=ia32",
     "babel-node": "babel-node --presets=env",
     "start": "cross-env DEBUG=app* NODE_ENV=development NO_ARDUINO=true npm run babel-node -- src",
-    "start-pro": "cross-env NO_ARDUINO=true npm run babel-node -- src"
+    "start-pro": "cross-env NO_ARDUINO=true npm run babel-node -- src",
+    "tunnel": "tunnel.bat"
   },
   "author": "PepperKick",
   "license": "ISC",
@@ -39,6 +40,7 @@
     "serialport": "^6.2.0",
     "socket.io": "^2.1.1",
     "stereo-analyser-node": "^1.0.0",
+    "tunnel-ssh": "^4.1.4",
     "weather-js": "^2.0.0"
   },
   "babel": {
