--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "async-sleep": "^0.1.0",
     "audio-analyser": "^1.0.2",
     "audio-waveform": "^1.3.0",
+    "aws-iot-device-sdk": "^2.2.1",
+    "body-parser": "^1.18.3",
     "clear": "^0.1.0",
     "color": "^3.0.0",
     "corsair-sdk": "^1.2.0",
@@ -28,8 +30,10 @@
     "hueplus": "^0.0.1",
     "inquirer": "^5.2.0",
     "johnny-five": "^0.14.3",
+    "mqtt": "^2.18.3",
     "node-addon-api": "^0.6.3",
     "node-core-audio": "^0.5.1",
+    "node-vibrant": "^3.0.0",
     "passport": "^0.4.0",
     "passport-discord": "^0.1.3",
     "prompt": "^1.0.0",
@@ -37,11 +41,13 @@
     "python-bridge": "^1.0.3",
     "python-shell": "^0.5.0",
     "request": "^2.87.0",
+    "robotjs": "^0.5.1",
     "serialport": "^6.2.0",
     "socket.io": "^2.1.1",
     "stereo-analyser-node": "^1.0.0",
     "tunnel-ssh": "^4.1.4",
-    "weather-js": "^2.0.0"
+    "weather-js": "^2.0.0",
+    "ws": "^5.2.1"
   },
   "babel": {
     "presets": [
