--- a/package.json
+++ b/package.json
@@ -2,40 +2,52 @@
   "name": "lightr",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "build": "node-gyp configure build --arch=ia32",
     "babel-node": "babel-node --presets=env",
-    "start": "cross-env DEBUG=app* NODE_ENV=development NO_ARDUINO=true npm run babel-node -- src",
-    "start-pro": "cross-env NO_ARDUINO=true npm run babel-node -- src",
+    "dev": "cross-env DEBUG=app* NODE_ENV=development NO_ARDUINO=true HUE_USER=EI13xkvWoRXCpXyzarYVMNBH8PVZATasmIbXk67w HUE_IP=192.168.0.202 MQTT_SERVER=192.168.0.200:1883 npm run babel-node -- .",
+    "start": "cross-env NO_ARDUINO=true HUE_USER=EI13xkvWoRXCpXyzarYVMNBH8PVZATasmIbXk67w HUE_IP=192.168.0.202 MQTT_SERVER=192.168.0.200:1883 npm run babel-node -- .",
     "tunnel": "tunnel.bat"
   },
   "author": "PepperKick",
   "license": "ISC",
   "gypfile": true,
   "dependencies": {
+    "@abskmj/servgen": "github:abskmj/servgen#8646396359a0790c059035d5cee937cebb513e41",
+    "active-win": "^3.0.0",
+    "active-window": "^0.1.0",
     "async-sleep": "^0.1.0",
     "audio-analyser": "^1.0.2",
     "audio-waveform": "^1.3.0",
+    "await-sleep": "^0.0.1",
     "aws-iot-device-sdk": "^2.2.1",
     "body-parser": "^1.18.3",
+    "chalk": "^2.4.1",
     "clear": "^0.1.0",
     "color": "^3.0.0",
+    "color-convert": "^1.9.3",
+    "config": "^2.0.1",
     "corsair-sdk": "^1.2.0",
     "debug": "^3.1.0",
     "discord-rpc": "^3.0.0-beta.10",
     "discord.js": "^11.3.2",
     "express": "^4.16.3",
     "fft-js": "^0.0.11",
+    "hotkeys-js": "^3.3.8",
     "hueplus": "^0.0.1",
     "inquirer": "^5.2.0",
     "johnny-five": "^0.14.3",
+    "keyboard-shortcut": "^1.2.0",
     "mqtt": "^2.18.3",
     "node-addon-api": "^0.6.3",
     "node-core-audio": "^0.5.1",
+    "node-persist": "^3.0.1",
     "node-vibrant": "^3.0.0",
     "passport": "^0.4.0",
     "passport-discord": "^0.1.3",
+    "philips-hue": "^1.2.0",
+    "preferences": "^1.0.2",
     "prompt": "^1.0.0",
     "pytalk": "^1.0.5",
     "python-bridge": "^1.0.3",
@@ -43,6 +55,7 @@
     "request": "^2.87.0",
     "robotjs": "^0.5.1",
     "serialport": "^6.2.0",
+    "shortcut": "^0.0.4",
     "socket.io": "^2.1.1",
     "stereo-analyser-node": "^1.0.0",
     "tunnel-ssh": "^4.1.4",
@@ -52,6 +65,9 @@
   "babel": {
     "presets": [
       "env"
+    ],
+    "plugins": [
+      "add-module-exports"
     ]
   },
   "os": [
@@ -62,6 +78,7 @@
   ],
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-add-module-exports": "^1.0.0",
     "babel-preset-env": "^1.6.1",
     "cross-env": "^5.1.4",
     "nodemon": "^1.17.4"
