--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "node-gyp configure build --arch=ia32",
     "babel-node": "babel-node --presets=env",
-    "dev": "cross-env DEBUG=app* NODE_ENV=development NO_ARDUINO=true HUE_USER=EI13xkvWoRXCpXyzarYVMNBH8PVZATasmIbXk67w HUE_IP=192.168.0.202 MQTT_SERVER=192.168.0.200:1883 npm run babel-node -- .",
-    "start": "cross-env NO_ARDUINO=true HUE_USER=EI13xkvWoRXCpXyzarYVMNBH8PVZATasmIbXk67w HUE_IP=192.168.0.202 MQTT_SERVER=192.168.0.200:1883 npm run babel-node -- .",
+    "dev": "cross-env DEBUG=app* NODE_ENV=development HUE_USER=EI13xkvWoRXCpXyzarYVMNBH8PVZATasmIbXk67w HUE_IP=192.168.0.202 MQTT_SERVER=192.168.0.200:1883 npm run babel-node -- .",
+    "start": "cross-env HUE_USER=EI13xkvWoRXCpXyzarYVMNBH8PVZATasmIbXk67w HUE_IP=192.168.0.202 MQTT_SERVER=192.168.0.200:1883 npm run babel-node -- .",
     "tunnel": "tunnel.bat"
   },
   "author": "PepperKick",
@@ -17,6 +17,7 @@
     "@abskmj/servgen": "github:abskmj/servgen#8646396359a0790c059035d5cee937cebb513e41",
     "active-win": "^3.0.0",
     "active-window": "^0.1.0",
+    "async-request": "^1.2.0",
     "async-sleep": "^0.1.0",
     "audio-analyser": "^1.0.2",
     "audio-waveform": "^1.3.0",
@@ -41,13 +42,17 @@
     "keyboard-shortcut": "^1.2.0",
     "mqtt": "^2.18.3",
     "node-addon-api": "^0.6.3",
-    "node-core-audio": "^0.5.1",
+    "node-cmd": "^3.0.0",
     "node-persist": "^3.0.1",
+    "node-pixel": "^0.10.1",
+    "node-run-cmd": "^1.0.1",
     "node-vibrant": "^3.0.0",
     "passport": "^0.4.0",
     "passport-discord": "^0.1.3",
+    "path-exists": "^3.0.0",
     "philips-hue": "^1.2.0",
     "preferences": "^1.0.2",
+    "process-exists": "^3.1.0",
     "prompt": "^1.0.0",
     "pytalk": "^1.0.5",
     "python-bridge": "^1.0.3",
